# MiceSearch

./: CMakeLists.txt  README.md  main.cpp
Debug/: bazinga
inc/: askMe.h  dictionary.h  global.h  indexer.h  posting.h  proceeding.h  search.h
src/: askMe.cpp  dictionary.cpp  indexer.cpp  posting.cpp  proceeding.cpp  search.cpp
